--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <script src="myscripts.js"></script>
     <html>
         <body id="body">
-        <p id="tinyText">click clock for functionality( Mattias Tüksammel )</p>
+        <p id="tinyText">click clock for functionality( Mattias Tüksammel ) <br> github: https://github.com/Tyks23/eesrakendused_kt1</p>
+        
         <p id="clockText"  onclick= "buttonAdder()"></p>
+
 
 </body>
 </html>
